Fix: Vertical alignment in header is now consistent across styles
https://datatables.net/forums/discussion/comment/240171/#Comment_240171

--- a/css/common.scss
+++ b/css/common.scss
@@ -80,6 +80,7 @@ $table-header-order-height: 20px !default;
 	--dt-row-hover: 0, 0, 0;
 	--dt-column-ordering: 0, 0, 0;
 	--dt-header-align-items: center;
+	--dt-header-vertical-align: middle;
 
 	// For blocking elements in extensions (FixedHeader, etc)
 	--dt-html-background: white;
