--- a/css/dataTables.bootstrap4.scss
+++ b/css/dataTables.bootstrap4.scss
@@ -6,10 +6,6 @@ $table-row-selected: 2 117 216;
 @import './processing.scss';
 @import './typography.scss';
 
-:root {
-	--dt-header-align-items: flex-end;
-}
-
 table.dataTable.table {
 	clear: both;
 	max-width: none;
