--- a/css/dataTables.bootstrap5.scss
+++ b/css/dataTables.bootstrap5.scss
@@ -7,10 +7,6 @@ $table-header-order-height: 24px;
 @import './processing.scss';
 @import './typography.scss';
 
-:root {
-	--dt-header-align-items: flex-end;
-}
-
 /*! Bootstrap 5 integration for DataTables
  *
  * ©2020 SpryMedia Ltd, all rights reserved.
